# SimSitting

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  coi-serviceworker.js  index.html  simsitting-4e6887ff491b040f.js  simsitting-7f26ff0f11213c3.js  simsitting-9efd42952dc2fdab.js  simsitting-aae7e24b9841eb57.js  simsitting-ca1c1accf8babd4f.js  simsitting-d98076159ef50df.js
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/: README.md
assets/shaders/: opinion_physics.wgsl  post_process.wgsl
snippets/simsitting-a7776021bdd15b9d/: inline0.js  inline1.js
src/: README.md  audio.rs  compute.rs  economy.rs  humint.rs  interop.rs  main.rs  media.rs  oracle.rs  politics.rs  render.rs  shadow.rs  sim.rs  telemetry.rs  ui.rs  zone.rs
