[package]
name = "simsitting"
version = "0.1.0"
edition = "2021"
description = "SimSitting — A media company simulator. Interactive art meets social commentary."

[[bin]]
name = "simsitting"
path = "src/main.rs"

[dependencies]
bevy = "0.16"
bevy_egui = "0.34"
rand = "0.8"
bytemuck = { version = "1.14", features = ["derive"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "CustomEvent", "Document", "HtmlElement",
    "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement",
] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
